smoky fix text align in market summary

--- a/src/containers/page/homepage/elements/marketDetail/marketSummary/MarketSummary.scss
+++ b/src/containers/page/homepage/elements/marketDetail/marketSummary/MarketSummary.scss
@@ -32,6 +32,7 @@
         font-size: 17px;
         font-weight: 900;
         color: var(--color-text-main);
+        text-align: right;
     }
     .label {
         font-size: 16px;
